--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,9 @@
-# Windows thumbnail cache files
-Thumbs.db
-ehthumbs.db
-ehthumbs_vista.db
+# Ignore Gradle project-specific cache directory
+.gradle
 
-# Folder config file
-Desktop.ini
+# Ignore Gradle build output directory
+build
+/bin/
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-# =========================
-# Operating System Files
-# =========================
+# Ignore Eclipse Settings
+/.settings/
